# uvmemcached

./: .gitignore  README.md  Vagrantfile  autogen.sh  configure.ac
libuvmemcached/: configure.ac
libuvmemcached/include/: uvmemcached.h
libuvmemcached/include/private/: pool.h
libuvmemcached/src/: Makefile.am  memcached.c  pool.c  uvmemcached_selftest.c
src/: Makefile.am  libuvmemcached.pc.in  memcached.c  pool.c  uvmemcached_selftest.c
uvmemcachedrb/: Gemfile  uvmemcachedrb.gemspec
uvmemcachedrb/features/: connection.feature  get_and_set.feature
uvmemcachedrb/features/support/: env.rb
uvmemcachedrb/features/support/step_definitions/: steps.rb
uvmemcachedrb/lib/uv/: memcached.rb
uvmemcachedrb/lib/uv/memcached/: client.rb
uvmemcachedrb/spec/: spec_helper.rb
uvmemcachedrb/spec/uv/memcached/: client_spec.rb
